--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DATABASE_URL=postgresql+asyncpg://postgres:mysecretpassword@localhost:5432/mydatabase
 JWT_SECRET=c0c1c66a03d710ec3557eb71053a879d
 JWT_ALGORITHM=HS256
+REDIS_HOST=localhost
+REDIS_PORT=6379
